<resources>
    <string name="app_name">facebook_login_ui</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_for_facebook">Sign Up for Facebook</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="change">Change</string>
    <string name="english">English</string>
    <string name="finish">Finish</string>
    <string name="logout">Logout</string>
</resources>